--- a/package.json
+++ b/package.json
@@ -1,17 +1,6 @@
 {
   "name": "tcp-tls-tunnel",
-  "version": "1.0.0",
-  "keywords": [
-    "cipher suites",
-    "ciphers",
-    "cipher",
-    "tls",
-    "grease",
-    "session ticket",
-    "ssl session",
-    "TLS_EMPTY_RENEGOTIATION_INFO_SCSV",
-    "remove TLS_EMPTY_RENEGOTIATION_INFO_SCSV"
-  ],
+  "version": "1.0.1",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
@@ -44,5 +33,16 @@
   },
   "license": "MIT",
   "sideEffects": false,
-  "private": false
+  "private": false,
+  "keywords": [
+    "cipher suites",
+    "ciphers",
+    "cipher",
+    "tls",
+    "grease",
+    "session ticket",
+    "ssl session",
+    "TLS_EMPTY_RENEGOTIATION_INFO_SCSV",
+    "remove TLS_EMPTY_RENEGOTIATION_INFO_SCSV"
+  ]
 }
