--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tcp-tls-tunnel",
-  "version": "1.0.3",
+  "description": "Provides NodeJS Http and Https agents that establish TCP and TLS connections via our modified poxy server.",
+  "version": "1.0.4",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
